--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "4.1.2",
     "@angular/platform-browser-dynamic": "4.1.2",
     "@ionic-native/core": "3.10.2",
+    "@ionic-native/geolocation": "^3.12.1",
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "^2.0.0",
+    "cordova-plugin-geolocation": "^2.4.3",
     "ionic-angular": "3.3.0",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
@@ -36,5 +38,10 @@
     "@ionic/cli-plugin-ionic-angular": "1.3.1",
     "typescript": "2.3.3"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {}
+    }
+  }
 }
